experimental animations on home screen

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="Jason Kuffler">
 		<meta name="description" content="A sveltekit site with professional information about and designed by Jason Kuffler" />
-		<meta name="keywords" content="Kuffler, web developer, designer, Jason K., Kuff" />
+		<meta name="keywords" content="Kuffler, web developer, designer, Jason Kuffler, Kuff" />
 		<title>Jason K. Codes</title>
 		%sveltekit.head%
 	</head>
